# vcpkgMinecraft

./: CMakeLists.txt  README.md  build.sh  prebuild.sh  run.sh  vcpkg.json
include/: Camera.h  Camera.hpp  Texture.h  Texture.hpp  VAO.hpp
src/: Camera.cpp  EBO.cpp  Main.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  stb.cpp
